changes made in the main file

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     <!-- Header & Navigation -->
     <header class="bg-gray-950/80 backdrop-blur-sm sticky top-0 left-0 right-0 z-40 border-b border-gray-800">
         <div class="max-w-screen-2xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex items-center justify-between h-16">
+            <div class="flex items-center justify-between h-20">
                 <!-- Logo -->
                 <div class="flex-shrink-0">
-                    <a href="#" class="flex items-center space-x-2">
-                        <img src="/images/logo.png" alt="FracTek Logo" class="h-8 w-8">
-                        <span class="text-2xl font-bold gradient-text">FracTek</span>
+                    <a href="#" class="flex items-center space-x-3">
+                        <img src="/images/fractal official logo (1).png" alt="FracTek Logo" class="h-10 w-10">
+                        <span class="text-3xl font-bold gradient-text">FracTek</span>
                     </a>
                 </div>
                 <!-- Nav -->
@@ -101,7 +101,7 @@
     </header>
 
     <!-- Mobile Menu -->
-    <div id="mobile-menu" class="hidden md:hidden fixed top-16 left-0 right-0 z-30 bg-gray-950 border-b border-gray-800 p-4">
+    <div id="mobile-menu" class="hidden md:hidden fixed top-20 left-0 right-0 z-30 bg-gray-950 border-b border-gray-800 p-4">
         <a href="#" class="doc-link block py-2 px-2 rounded text-sm font-medium text-slate-300 hover:bg-gray-800" data-md-url="https://raw.githubusercontent.com/thynash/fractek/main/docs/index.md">Overview</a>
         <a href="#" class="doc-link block py-2 px-2 rounded text-sm font-medium text-slate-300 hover:bg-gray-800" data-md-url="https://raw.githubusercontent.com/thynash/fractek/main/docs/installation.md">Installation</a>
         <a href="#" class="doc-link block py-2 px-2 rounded text-sm font-medium text-slate-300 hover:bg-gray-800" data-md-url="https://raw.githubusercontent.com/thynash/fractek/main/docs/contributing.md">Contributing</a>
@@ -129,7 +129,7 @@
             </main>
 
             <!-- Right sidebar (Table of Contents) -->
-            <aside class="hidden xl:block fixed top-16 right-0 w-64 h-full py-10 pr-6">
+            <aside class="hidden xl:block fixed top-20 right-0 w-64 h-full py-10 pr-6">
                 <div class="space-y-4">
                     <h3 class="font-semibold text-slate-300">On this page</h3>
                     <div id="toc-container">
