--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <!-- Logo -->
                 <div class="flex-shrink-0">
                     <a href="#" class="flex items-center space-x-4">
-                        <img src="/images/fractal official logo (1).png" alt="FracTek Logo" class="h-12 w-12">
+                        <img src="/images/logo.png" alt="FracTek Logo" class="h-12 w-12">
                         <span class="text-4xl font-bold gradient-text">FracTek</span>
                     </a>
                 </div>
